src/test/error/symbol2.lns
print( __func__ );  // error
